# oidcheck

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: ci.yml
oidcheck/: __init__.py  logging_config.py  main.py  models.py  server.py  utils.py  validator.py
oidcheck/static/: styles.css
oidcheck/templates/: index.html
src/oidcheck/: __main__.py  main.py  models.py  server.py  validator.py
src/oidcheck/static/: styles.css
src/oidcheck/templates/: index.html
tests/: test_main.py  test_server.py  test_server_config.py  test_utils.py  test_validator.py
