[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flask-oidc-config-validator"
version = "1.0.0"
authors = [
  { name="Lance Tuller", email="lancetuller@gmail.com" },
]
description = "A CLI and web-based tool to validate OIDC configuration for Flask applications, especially for Azure GCC-High environments."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Framework :: Flask",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]
dependencies = [
    "Flask",
    "python-dotenv",
    "msal",
    "pydantic",
    "pydantic-settings",
    "flask-limiter",
    "flask-wtf",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
"Homepage" = "https://github.com/lance0/oidcheck"
"Bug Tracker" = "https://github.com/lance0/oidcheck/issues"

[project.scripts]
oidcheck = "oidcheck.main:main"

[tool.setuptools]
packages = ["oidcheck"]
